--- a/index.html
+++ b/index.html
@@ -7,8 +7,18 @@
 </head>
 <body>
 
-    <canvas id="myCanvas" width="500" height="500" style="border:1px solid #e06812"></canvas>
+    <canvas id="myCanvas" width="500" height="550" style="border:1px solid #e06812"></canvas>
     <script src="Objects.js"></script>
     <script src="loop.js"></script>
+    <p>
+        Car driver
+        if You are on keyboard W is speed up S is slow down A is move left and D is move right
+        Drive past the trash cans to get a high score
+        use the buttons if you do not have a key board
+    </p>
+    <button onclick="left()" onmouseup="leftn()">left</button>
+    <button onclick="up()"   onmouseup="upn()">Up</button>
+    <button onclick="right()"onmouseup="rightn()">right</button>
+    <button onclick="down()" onmouseup="downn()">down</button>
 </body>
 </html>
