--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
         Drive past the trash cans to get a high score
         use the buttons if you do not have a key board
     </p>
-    <button onclick="left()" onmouseup="leftn()">left</button>
-    <button onclick="up()"   onmouseup="upn()">Up</button>
-    <button onclick="right()"onmouseup="rightn()">right</button>
-    <button onclick="down()" onmouseup="downn()">down</button>
+    <div style="text-align:center;width:480px;">
+        <button onclick="left()" ontouchstart="left()">left</button>
+        <button onclick="up()" ontouchstart="up()">down</button>
+        <button onclick="right()" ontouchstart="right()">right</button>
+        <button onclick="down()" ontouchstart="down()">up</button>
+        </div>
 </body>
 </html>
