--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         Car driver
         if You are on keyboard W is speed up S is slow down A is move left and D is move right
         Drive past the trash cans to get a high score
-        use the buttons if you do not have a key board
+        use the buttons if you do not have a keyboard they dont work well.
     </p>
     <div style="text-align:center;width:480px;">
         <button onclick="left()" ontouchstart="left()">left</button>
