--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title></title>
 </head>
 <body>
-
+<!--Created By Dallen-->
     <canvas id="myCanvas" width="500" height="550" style="border:1px solid #e06812"></canvas>
     <script src="Objects.js"></script>
     <script src="loop.js"></script>
