--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         if You are on keyboard W is speed up S is slow down A is move left and D is move right
         Drive past the trash cans to get a high score
     </p>
-    <p>mobile controls</p>
+    <!--<p>mobile controls</p>-->
    <!-- <input type="checkbox" id="mobile"/> -->
 </body>
 </html>
