added text for controls

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
 
     <canvas id="myCanvas" width="500" height="500" style="border:1px solid #e06812"></canvas>
+    <p>w is accelerate s is slow down a is left and d is right</p>
     <script src="Objects.js"></script>
     <script src="loop.js"></script>
 </body>
